read file in local

--- a/renderer/add.html
+++ b/renderer/add.html
@@ -12,12 +12,12 @@
 <body>
   <div class="container mt-4">
     <h1>添加音乐到曲库</h1>
-    <button type="button" class="mt-4 btn btn-primary btn-lg btn-block">
+    <button type="button" id="select-music" class="mt-4 btn btn-primary btn-lg btn-block">
       选择音乐
     </button>
   </div>
   <script>
-    require('./index.js')
+    require('./add.js')
   </script>
 </body>
 
