--- a/renderer/add.html
+++ b/renderer/add.html
@@ -12,6 +12,7 @@
 <body>
   <div class="container mt-4">
     <h1>添加音乐到曲库</h1>
+    <div id="musicList" class="mb-2">您还未选择任何音乐文件</div>
     <button type="button" id="select-music" class="mt-4 btn btn-primary btn-lg btn-block">
       选择音乐
     </button>
