--- a/renderer/add.html
+++ b/renderer/add.html
@@ -13,8 +13,11 @@
   <div class="container mt-4">
     <h1>添加音乐到曲库</h1>
     <div id="musicList" class="mb-2">您还未选择任何音乐文件</div>
-    <button type="button" id="select-music" class="mt-4 btn btn-primary btn-lg btn-block">
+    <button type="button" id="select-music" class="mt-4 btn btn-outlint-primary btn-lg btn-block">
       选择音乐
+    </button>
+    <button type="button" id="add-music" class="mt-4 btn btn-primary btn-lg btn-block">
+      导入音乐
     </button>
   </div>
   <script>
