fixed new version error

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -30,8 +30,8 @@
       </div>
     </div>
   </div>
-  <script>
-    require('./index.js')
+  <script src="./index.js">
+    // require('./index.js')
   </script>
 </body>
 
